published audit and activity logs pt 1

--- a/docs/02.01.02 - Monitoring Canvas Driven Apps - Auditing and Activity Logs.md
+++ b/docs/02.01.02 - Monitoring Canvas Driven Apps - Auditing and Activity Logs.md
@@ -2,7 +2,7 @@
 
 ## Summary
 
-**Microsoft Power Apps Canvas Apps** provide users the ability to quickly create and publish applications to their enterprise. With this ability comes concerns with governance to ensure users are allowed the appropriate permissions as well as identifying and highlighting specific apps across the organization. This article will explore **promoting a Canvas App as a featured or hero app** which can be used as communication devices during crisis, internal training, etc. From there the article will discuss other scenarios useful for monitoring **Canvas Apps** with the **Power Apps Administration PowerShell** cmdlets. From there the article will go into **activity events ** taken within the **Power Platform**. 
+**Microsoft Power Apps Canvas Apps** provide users the ability to quickly create and publish applications to their enterprise. With this ability comes concerns with governance to ensure users are allowed the appropriate permissions as well as identifying and highlighting specific apps across the organization. This article will explore **promoting a Canvas App as a Featured or Hero app** which can be used as communication devices during crisis, internal training, etc. From there the article will discuss other scenarios useful for monitoring **Canvas Apps** with the **Power Apps Administration PowerShell** cmdlets. To wrap up, the article will go into **activity events ** taken within the **Power Platform**. 
 
 ## Featured and Hero Apps
 
@@ -49,7 +49,7 @@ To connect to your **Power Apps** tenant, run the following command in **PowerSh
 Add-PowerAppsAccount
 ```
 
-That command will prompt you for credentials. Using the *-Username* and *-Password* arguments, a script can run a passive authentication without user input.
+That command will prompt you for credentials. Using the *-Username* and *-Password* arguments, a s**cript can run a passive authentication without user input**.
 
 #### Get Environment and Canvas App Identifiers
 
@@ -73,7 +73,7 @@ Set-AdminPowerAppAsFeatured -AppName {AppName}
 Set-AdminPowerAppAsHero -AppName {AppName}
 ```
 
-When the commands are run, a response is sent back with a success HTTP code and headers including a request identifier. To confirm the **Power App is Featured or Hero**, a user can navigate to the **Power Apps Player** to view. As an administrator, I'll want tighter control and visibility into these actions as well as other lifecycle events for **Power Apps**. Capturing when apps are created and destroyed, updated and restored are integral to better understanding usage patterns and ensuring governance is applied. To find out more, refer to **Part 2** where we will begin to search the **Unified Audit Log** for activity and audit logs.
+When the commands are run, a response is sent back with a success HTTP code and headers including a request identifier. To confirm the **Power App is Featured or Hero**, a user can navigate to the **Power Apps Player** to view. As an administrator, I'll want tighter control and visibility into these actions as well as other lifecycle events for **Power Apps**. Capturing when apps are created and destroyed, updated and restored are integral to better understanding usage patterns and ensuring governance is applied. To find out more, refer to [**Part 2**](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-canvas-apps---auditing-and-activity-logs-part-2) where we will begin to search the **Unified Audit Log** for activity and audit logs.
 
 ### Other Useful Power Apps Administration PowerShell Tasks
 
@@ -93,17 +93,17 @@ The "**Get**" cmdlets can all be used for **reporting and logging of the current
 Get-AdminPowerAppsUserDetails -OutputFilePath '.\adminUserDetails.txt' –UserPrincipalName 'admin@bappartners.onmicrosoft.com'
 ```
 
-Consider the use of these commands with techniques discussed in *Part 2 of Canvas Apps - Auditing and Activity Logs* for additional logging capabilities.
+Consider the use of these commands with techniques discussed in *[Part 2 of Canvas Apps - Auditing and Activity Logs](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-canvas-apps---auditing-and-activity-logs-part-2)* for additional logging capabilities.
 
 ## Activity Events for Canvas Apps
 
 ### What events are audited?
 
-The events audited by the **Office 365 Security and Compliance Center** allow for administrators to search across multiple services offered including **Power Apps**. These **logs are collected at the SDK layer** meaning one action can actually trigger multiple event logs in the log store. Events collected include app lifecycle actions such as when an app is created, edited or deleted. User actions include launching an app or modifying permissions.
+The events audited by the **Office 365 Security and Compliance Center** allow for administrators to search across multiple services offered including **Power Apps**. These **logs are collected at the SDK layer**, meaning one action can actually trigger multiple event logs in the log store. Events collected include app lifecycle actions such as when an app is **created**, **edited** or **deleted**. User actions include **launching** an app or **modifying permissions**.
 
 #### Common Audit Properties
 
-Each audit record includes common properties that can be used to help search or even correlate events together. Fields such as **precise time stamp**s, the **specific Canvas App**, the **operation performed** and **Identity of the record**. 
+Each audit record includes common properties that can be used to help search or even correlate events together. Fields such as **precise time stamps**, the **specific Canvas App**, the **operation performed** and **Identity of the record**. 
 
 | Field name      | Description                                                  |
 | :-------------- | :----------------------------------------------------------- |
@@ -118,7 +118,7 @@ Each audit record includes common properties that can be used to help search or 
 | UserType        | The audit type (Admin, Regular, System)                      |
 | Additional Info | Additional information if any (e.g. the environment name)    |
 
-The **Identity** value is key as it can help us better understand a chain of events. Consider when promoting an app as a Featured App. **Marking an app as featured creates three events**:
+The **Identity** value is key as it can help us better understand a chain of events. Consider when promoting an app as a **Featured** App. **Marking an app as featured creates three events**:
 
 *MarkPowerAppAsFeatured*
 
@@ -130,11 +130,11 @@ The same goes with **promoting a Hero app** as well as other events such as **re
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/CanvasApps/CanvasApp.Restore.JPG" style="zoom:50%;" />
 
-**In Part 2**, we will cover these events in detail to show how they are connected to paint a broader picture.
+**[In Part 2](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-canvas-apps---auditing-and-activity-logs-part-2)**, we will cover these events in detail to show how they are connected to paint a broader picture.
 
 #### List of Events
 
-The table below shows the events captured for Power Apps including **life cycle events of app**, **user modifications** and when a user launched a specific **Canvas App**. For an up to date reference check out the [Activity logging for Power Apps Audit Schema](https://docs.microsoft.com/en-us/power-platform/admin/logging-powerapps) document.
+The table below shows the events captured for **Power Apps** including **life cycle events of app**, **user modifications** and when a user launched a specific **Canvas App**. For an up to date reference check out the [Activity logging for Power Apps Audit Schema](https://docs.microsoft.com/en-us/power-platform/admin/logging-powerapps) document.
 
 | Event                  | Description                                                  |
 | :--------------------- | :----------------------------------------------------------- |
@@ -151,11 +151,11 @@ The table below shows the events captured for Power Apps including **life cycle 
 
 ##### Life Cycle Events
 
-Life cycle events include when a maker creates an app, edits and publishes an app. Other events include restoring an app to a prior version as well as the previously mentioned promoting to a featured or hero app.
+Life cycle events include when a maker **creates** an app, **edits** and **publishes** an app. Other events include **restoring** an app to a prior version as well as the previously mentioned **promoting** to a featured or hero app.
 
 ##### Launched Event
 
-The Launched event is a highly asked for event that captured the precise time that a user logins into an app. This audited event allows admins to see the **user's Azure identifier** and **which app they logged into**. Not shown is the **user's session identifier** but this can be found **within the specific Canvas App run** which will be discussed later.
+The **Launched** event is a highly asked for event that captured the precise time that a user logins into an app. This audited event allows admins to see the **user's Azure identifier** and **which app they logged into**. Not shown is the **user's session identifier** but this can be found **within the specific Canvas App run** which will be discussed later.
 
 ##### Edited App Permission Event
 
@@ -175,7 +175,7 @@ In the image above, I gave the user the "*Custom Sys Admins*" security role for 
 
 In this article we have covered getting started with the **Power App Administration PowerShell** module and cmdlets for **Featured and Hero App promotion**. Continue exploring the capabilities of this module as it pertains to your **Power Apps Canvas App** administrative operations. 
 
-We have also covered the what activities are currently captured for **Power Apps Canvas Apps**. Discussed in **Part 2** are techniques to view the audit logs within the **Office 365 Security and Compliance Portal** as well as **automated techniques**. 
+We have also covered the what activities are currently captured for **Power Apps Canvas Apps**. Discussed in [**Part 2**](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-canvas-apps---auditing-and-activity-logs-part-2) are techniques to view the audit logs within the **Office 365 Security and Compliance Portal** as well as **automated techniques**. 
 
 This article is designed to supplement the article on **Power App Analytics**, which provides more of an all up view of **Canvas App** usage. Combining these two documents, an administrator can now <u>track analytic metrics as well as the events that define those metrics</u>.
 
