--- a/docs/02.01.03 - Monitoring Canvas Driven Apps - Auditing and Activity Logs Part 2.md
+++ b/docs/02.01.03 - Monitoring Canvas Driven Apps - Auditing and Activity Logs Part 2.md
@@ -26,9 +26,15 @@ The Office 365 Security and Compliance Center found at https://protection.office
 
 As shown in the image above, a single action or multiple activities for Canvas App can be chosen for analysis. To begin our search, [run an audit log search](https://docs.microsoft.com/en-us/microsoft-365/compliance/search-the-audit-log-in-security-and-compliance?view=o365-worldwide#search-the-audit-log) by specifying the activities, the time range and optional search parameters such as users or site. Once the search is complete, [review the results](https://docs.microsoft.com/en-us/microsoft-365/compliance/search-the-audit-log-in-security-and-compliance?view=o365-worldwide#step-2-view-the-search-results) in the portal. The results are maxed out at the most 5000 newest events and are incremented 150 records at a time. 
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/CanvasApps/CanvasApp.Portal.AllActivities.JPG" style="zoom:50%;" />
+
+Below is an image showing a drill down into the **Launched app** audit record.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/CanvasApps/CanvasApp.Portal.LaunchedApp.JPG" style="zoom:50%;" />
+
 ### PowerShell
 
-For PowerShell the ***Search-UnifiedAuditLog***, part of the **MSOline** module, is used for **Office 365** services including **Power Apps Canvas and Model Driven Apps**. For **Canvas Apps** there exist a record type called "**PowerAppsApp**" that will scope to only logs from **Canvas Apps**. Using the same table above, here are the PowerShell Operation equivalents to each captured event:
+For PowerShell the ***Search-UnifiedAuditLog***, part of the **MSOnline** module, is used for **Office 365** services including **Power Apps Canvas and Model Driven Apps**. For **Canvas Apps** there exist a record type called "**PowerAppsApp**" that will scope to only logs from **Canvas Apps**. Using the same table above, here are the PowerShell Operation equivalents to each captured event:
 
 | Event                  | PowerShell Operation      |
 | :--------------------- | :------------------------ |
@@ -42,6 +48,8 @@ For PowerShell the ***Search-UnifiedAuditLog***, part of the **MSOline** module,
 | Deleted app            | DeletePowerApp            |
 | Marked app as Hero     | MarkPowerAppAsHero        |
 | Deleted app permission | PowerAppPermissionDeleted |
+
+To use the Search-UnifiedAuditLog, a PS-Session must be created
 
 ```
 $endDate = Get-Date
@@ -67,9 +75,15 @@ Search-UnifiedAuditLog -StartDate $startDate -EndDate $endDate -RecordType Power
 
 Each record returned includes the data of the audit, the user and the data collected within the ***AuditData*** property. The **app and environment properties** are available within this property which can be **extracted and stored for contextual information to a log data store**.
 
+NOTE: I want to point out [verbiage that exists on the Search-UnifiedAuditLog page](https://docs.microsoft.com/en-us/powershell/module/exchange/policy-and-compliance-audit/search-unifiedauditlog?view=exchange-ps#description) referring to programmatically downloading data from the audit log:
+
+*If you want to programmatically download data from the Office 365 audit log, we recommend that you use the Office 365 Management Activity API instead of using the Search-UnifiedAuditLog cmdlet in a PowerShell script. The Office 365 Management Activity API is a REST web service that you can use to develop operations, security, and compliance monitoring solutions for your organization. For more information, see [Office 365 Management Activity API reference](https://docs.microsoft.com/office/office-365-management-api/office-365-management-activity-api-reference).*
+
 ### Office 365 Management Activity API
 
 Another way to automate delivery of audit data is by use of the **Office 365 Management Activity API**. A really great article by ... covers how to setup a subscription and webhook to deliver to Cosmos DB. 
+
+https://docs.microsoft.com/en-us/office/office-365-management-api/office-365-management-activity-api-reference#start-a-subscription
 
 ## Advanced Audit in Microsoft 365
 
