added ual images and commit

--- a/docs/02.01.03 - Monitoring Canvas Driven Apps - Auditing and Activity Logs Part 2.md
+++ b/docs/02.01.03 - Monitoring Canvas Driven Apps - Auditing and Activity Logs Part 2.md
@@ -104,6 +104,14 @@ Each record returned includes the data of the audit, the user and the data colle
 $AuditData = ConvertFrom-Json -InputObject $_.AuditData
 ```
 
+
+
+AzureDiagnostics  
+
+| where StreamType_s == "Output" 
+
+| project TimeGenerated, ResultDescription 
+
 ### Important Notes on the Exchange Online Module
 
 NOTE: I want to point out [verbiage that exists on the Search-UnifiedAuditLog page](https://docs.microsoft.com/en-us/powershell/module/exchange/policy-and-compliance-audit/search-unifiedauditlog?view=exchange-ps#description) referring to programmatically downloading data from the audit log:
@@ -141,7 +149,7 @@ From what I've seen, each blob contains around 10-15 minutes worth of audits but
 
 <flow image>
 
-
+![](https://raw.githubusercontent.com/wiki/aliyoussefi/MonitoringPowerPlatform/Artifacts/UnifiedAuditLog/ActvitiyAPI/ActivityApi.WebHook.DeliveryTimings.JPG)
 
 ## Managing, Archiving and Retaining Events
 
