added auditable events for power automate image

--- a/docs/02.02.02 - Monitoring Canvas Driven Apps - Auditing and Activity Logs Part 2.md
+++ b/docs/02.02.02 - Monitoring Canvas Driven Apps - Auditing and Activity Logs Part 2.md
@@ -16,7 +16,7 @@ This article will build off of **Canvas Apps - Auditing and Activity Part 1** to
 
 To begin using the **Office 365 Unified Audit Log**, your organization will need to have [at minimum a specific Office 365 or Microsoft 365 license](https://docs.microsoft.com/en-us/microsoft-365/compliance/search-the-audit-log-in-security-and-compliance?view=o365-worldwide#before-you-begin). Currently the license if the **E3 license**. The type of license will impact the retention of the logs, **E3 is for 90 days** while the **E5 license retains for a year** by default. [To turn on](https://docs.microsoft.com/en-us/microsoft-365/compliance/turn-audit-log-search-on-or-off?view=o365-worldwide), click the "**Turn on auditing**" button. If an error message occurs, most likely its due to licensing.
 
-<error message image>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/UnifiedAuditLog-NotLicensed-Error-EnableUnifiedAuditLogIngestion.JPG" style="zoom:50%;" />
 
 Users will need to be an Office 365 Global Administrator or be a member of one or more Security and Compliance Center role groups. [To provide a user access to the Security and Compliance Center](https://docs.microsoft.com/en-us/microsoft-365/security/office-365-security/grant-access-to-the-security-and-compliance-center?view=o365-worldwide), use the **Office 365 Admin Center** and open the Admin center for Compliance. Alternatively, you can directly access the permissions page from [here](https://protection.office.com/permissions). The permission needed is "**View-Only Audit Logs**" or "**Audit Logs**" which allows for viewing and exporting of audit reports.
 
