added ual images

--- a/docs/02.02.02 - Monitoring Canvas Driven Apps - Auditing and Activity Logs Part 2.md
+++ b/docs/02.02.02 - Monitoring Canvas Driven Apps - Auditing and Activity Logs Part 2.md
@@ -106,11 +106,23 @@ $AuditData = ConvertFrom-Json -InputObject $_.AuditData
 
 
 
+**Azure Automation** allows for the use of running PowerShell runbooks in Azure. Here is an example image of the output from running the **Search-UnifiedAuditLog** in **Azure Automation**:
+
+![ ](https://community.dynamics.com/resized-image/__size/380x372/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/3617.pastedimage1587652705396v1.jpeg)
+
+One of the benefits of **Azure Automation** is the ability to schedule the execution of our script. The image below shows the recurrence based on a schedule created.
+
+![ ](https://community.dynamics.com/resized-image/__size/382x215/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/4130.pastedimage1587652705397v2.jpeg)
+
+Another benefit is the native integration with **Azure Log Analytics.** This integration will come in handy further in this article.
+
+![ ](https://community.dynamics.com/resized-image/__size/320x240/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/2577.CanvasApp.AzureAutomation_2D00_LogAnalytics.JPG)
+
+Kusto Query:
+
 AzureDiagnostics  
-
 | where StreamType_s == "Output" 
-
-| project TimeGenerated, ResultDescription 
+| project TimeGenerated, ResultDescription
 
 ### Important Notes on the Exchange Online Module
 
